syntax = "proto3";

option csharp_namespace = "GrpcClient";

package webApi;


message UserRequest {
    string id = 1;
    string message = 2;
}

message UserResponse {
    string message = 1;
}

service MicrosservicoService {
    rpc ContractWebAPI(UserRequest) returns (UserResponse);
}